@@ -258,6 +258,60 @@ namespace libtorrent {
 			return p;
 		}
 
+		auto select_pos = std::string::npos;
+		string_view select = url_has_argument(uri, "so", &select_pos);
+		while (!select.empty())
+		{
+			// parse the ranges or indices
+			do
+			{
+				string_view token;
+				std::tie(token, select) = split_string(select, ',');
+
+				int idx1, idx2;
+				// TODO: what's the right number here?
+				constexpr int max_index = 10000; // can't risk out of memory
+
+				auto const divider = token.find_first_of('-');
+				if (divider != std::string::npos) // it's a range
+				{
+					if (divider == 0) // no start index
+						continue;
+					if (divider == token.size() - 1) // no end index
+						continue;
+
+					idx1 = std::atoi(token.substr(0, divider).to_string().c_str());
+					if (idx1 < 0 || idx1 > max_index) // invalid index
+						continue;
+					idx2 = std::atoi(token.substr(divider + 1).to_string().c_str());
+					if (idx2 < 0 || idx2 > max_index) // invalid index
+						continue;
+
+					if (idx1 > idx2) // wrong range limits
+						continue;
+				}
+				else // it's an index
+				{
+					idx1 = std::atoi(token.to_string().c_str());
+					if (idx1 < 0 || idx1 > max_index) // invalid index
+						continue;
+					idx2 = idx1;
+				}
+
+				if (int(p.file_priorities.size()) <= idx2)
+					p.file_priorities.resize(std::size_t(idx2 + 1), dont_download);
+
+				for (int i = idx1; i <= idx2; i++)
+					p.file_priorities[std::size_t(i)] = default_priority;
+
+			} while (!select.empty());
+
+			select_pos = find(uri, "&so=", select_pos);
+			if (select_pos == std::string::npos) break;
+			select_pos += 4;
+			select = uri.substr(select_pos, find(uri, "&", select_pos) - select_pos);
+		}
+
 		std::string::size_type peer_pos = std::string::npos;
 		string_view peer = url_has_argument(uri, "x.pe", &peer_pos);
 		while (!peer.empty())
@@ -265,7 +319,7 @@ namespace libtorrent {
 			error_code e;
 			tcp::endpoint endp = parse_endpoint(peer, e);
 			if (!e)
-				p.peers.push_back(endp);
+				p.peers.push_back(std::move(endp));
 
 			peer_pos = find(uri, "&x.pe=", peer_pos);
 			if (peer_pos == std::string::npos) break;
@@ -278,12 +332,12 @@ namespace libtorrent {
 		string_view node = url_has_argument(uri, "dht", &node_pos);
 		while (!node.empty())
 		{
-			std::string::size_type divider = node.find_last_of(':');
+			std::string::size_type const divider = node.find_last_of(':');
 			if (divider != std::string::npos)
 			{
-				int port = atoi(node.substr(divider + 1).to_string().c_str());
-				if (port != 0)
-					p.dht_nodes.push_back(std::make_pair(node.substr(0, divider).to_string(), port));
+				int const port = std::atoi(node.substr(divider + 1).to_string().c_str());
+				if (port > 0 && port < int(std::numeric_limits<std::uint16_t>::max()))
+					p.dht_nodes.emplace_back(node.substr(0, divider).to_string(), port);
 			}
 
 			node_pos = find(uri, "&dht=", node_pos);
@@ -297,7 +351,7 @@ namespace libtorrent {
 		if (btih.size() == 40 + 9) aux::from_hex({&btih[9], 40}, info_hash.data());
 		else if (btih.size() == 32 + 9)
 		{
-			std::string ih = base32decode(btih.substr(9));
+			std::string const ih = base32decode(btih.substr(9));
 			if (ih.size() != 20)
 			{
 				ec = errors::invalid_info_hash;
