@@ -1,3 +1,5 @@
+	* implemented support magnet URI extension, select specific file indices
+	  for download, BEP53
 	* make tracker keys multi-homed. remove set_key() function on session.
 	* add API to query whether alerts have been dropped or not
 	* add flags()/set_flags()/unset_flags() to torrent_handle, deprecate individual functions
